[package]
name = "influxdb_line_protocol"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
[dependencies] # In alphabetical order
bytes = "1.4"
libc = { version = "0.2", optional = true }
nom = { version = "7", default-features = false, features = ["std"] }
smallvec = { version = "1.10.0", features = ["union"] }
snafu = "0.7"
